--- a/gb/nf1351518.md
+++ b/gb/nf1351518.md
@@ -1,4 +1,4 @@
-<a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table align=center border="0"><tr><td colspan="3" VALIGN=TOP nowrap><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/11.jpg" title="头条要闻" alt="头条要闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/13.jpg" title="专题" alt="专题"></a></td></tr><tr><td colspan="3" VALIGN=TOP nowrap><p><a href="https://github.com/1992513/www/blob/master/README.md?uthtndt#1" target="_blank">首页</a> | <a href="https://d2ktwgchvgcnzd.cloudfront.net/1?jsdaoc" target="_blank">动态网</a> | <a href="https://d12gl57lrewmhb.cloudfront.net/2?wjlnmz" target="_blank">大纪元</a> | <a href="https://d2cdd2sap6vl0o.cloudfront.net/4?elomzgz" target="_blank">看中国</a> | <a href="https://d2sn4gemyo21al.cloudfront.net/pHh5q?xzyxy" target="_blank">新生网</a> | <a href="https://d2zvse34bag8ol.cloudfront.net/tktpt?ffghem" target="_blank">阿波罗网</a> | <a href="https://dryak9kcfpt3j.cloudfront.net/Mjpvu?yqidiki" target="_blank">干净世界</a> | <a href="https://d2zw89wk00y815.cloudfront.net/10?dgged" target="_blank">退党服务</a> | <a href="https://d1f01xri6nyv0g.cloudfront.net/Rffqf?muemxo" target="_blank">明慧广播</a> | <a href="https://d7b58bkqqk9ju.cloudfront.net/nw9Vn?cokinxfhc" target="_blank">传奇时代</a> | <a href="https://d1ff3ajoaf61nd.cloudfront.net/AF9AG?viiume" target="_blank">新境界影视</a> | <a href="https://d3myewunzonann.cloudfront.net/zqMQA?ymkssogwa" target="_blank">文昭谈论</a> | <a href="https://doqmgyop4u892.cloudfront.net/7?sycaof" target="_blank">明慧</a></p><p><a href="https://dm41kyod3ht9r.cloudfront.net/9?emhgyi" target="_blank">大法</a> | <a href="https://d2gp1icp8dv5pn.cloudfront.net/3?igtkdt" target="_blank">新唐人</a> | <a href="https://d1xqyoddjp48c4.cloudfront.net/obAhT?mfpnmehyf" target="_blank">人民报</a> | <a href="https://d3bo5docy69ast.cloudfront.net/xXNHu?tqfde" target="_blank">放光明</a> | <a href="https://divmj5v44rbg.cloudfront.net/5?gduanc" target="_blank">新纪元</a> | <a href="https://dp5vkf7bbqo9d.cloudfront.net/6?hpuwqhj" target="_blank">希望之声</a> | <a href="https://d2fq83y0z2h6n4.cloudfront.net/11?tfehdtpc" target="_blank">无界网络</a> | <a href="https://d2agd1dsojkgmu.cloudfront.net/Pueji?sznqoxf" target="_blank">追查国际</a> | <a href="https://d18bx7gz18d1cs.cloudfront.net/16?ooxnzbx" target="_blank">明慧之窗</a> | <a href="https://d2zw89wk00y815.cloudfront.net/LdvzZ?lsilss" target="_blank">细语人生</a> | <a href="https://d26c5rnrr5nvsd.cloudfront.net/fBn3r?peukins" target="_blank">新世纪影视</a> | <a href="https://dcz6rimunj42y.cloudfront.net/PUWMb?llucitnp" target="_blank">江峰时刻</a> | <a href="https://dp0r2i3ixve2v.cloudfront.net/8?qlgzm" target="_blank">正见</a></p></td></tr>
+<a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table align=center border="0"><tr><td colspan="3" VALIGN=TOP nowrap><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/11.jpg" title="头条要闻" alt="头条要闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/13.jpg" title="专题" alt="专题"></a></td></tr><tr><td colspan="3" VALIGN=TOP nowrap><p><a href="https://github.com/1992513/www/blob/master/README.md?liimcl#1" target="_blank">首页</a> | <a href="https://dh9kqnflpbxz3.cloudfront.net/1?atfekwqdn" target="_blank">动态网</a> | <a href="https://d1itcd32obhl6s.cloudfront.net/2?abxhs" target="_blank">大纪元</a> | <a href="https://doyvntponycdh.cloudfront.net/4?bemklafcj" target="_blank">看中国</a> | <a href="https://d1qenr1x5ix28c.cloudfront.net/pHh5q?ktlhzz" target="_blank">新生网</a> | <a href="https://d2p9r31ubb8t81.cloudfront.net/tktpt?vbfwthscj" target="_blank">阿波罗网</a> | <a href="https://d265ujbtchne9r.cloudfront.net/Mjpvu?nppmrkwdv" target="_blank">干净世界</a> | <a href="https://d3dnxm84b62m8k.cloudfront.net/10?fqthkms" target="_blank">退党服务</a> | <a href="https://dhltq9qxjnmw2.cloudfront.net/Rffqf?lyapqhcsr" target="_blank">明慧广播</a> | <a href="https://d2csrn8d5ncbve.cloudfront.net/nw9Vn?zidpjlufp" target="_blank">传奇时代</a> | <a href="https://d3dnxm84b62m8k.cloudfront.net/AF9AG?thosozni" target="_blank">新境界影视</a> | <a href="https://d1kgsi70b35buf.cloudfront.net/zqMQA?polyye" target="_blank">文昭谈论</a> | <a href="https://dol9bue5bysdj.cloudfront.net/7?avfuie" target="_blank">明慧</a></p><p><a href="https://d1q5zi9q4mpi9f.cloudfront.net/9?mapydy" target="_blank">大法</a> | <a href="https://d11leod1im7q2u.cloudfront.net/3?zphcuu" target="_blank">新唐人</a> | <a href="https://d2agd1dsojkgmu.cloudfront.net/obAhT?nkffbem" target="_blank">人民报</a> | <a href="https://d12gl57lrewmhb.cloudfront.net/xXNHu?pdwno" target="_blank">放光明</a> | <a href="https://d2iiqnrx4rrboe.cloudfront.net/5?rcpth" target="_blank">新纪元</a> | <a href="https://d124e4v75n9sum.cloudfront.net/6?ohqgd" target="_blank">希望之声</a> | <a href="https://d1b0mjr6ppvor4.cloudfront.net/11?broxmn" target="_blank">无界网络</a> | <a href="https://d2zw89wk00y815.cloudfront.net/Pueji?hdmmf" target="_blank">追查国际</a> | <a href="https://d2a8dyhoj0w562.cloudfront.net/16?jrylocqrs" target="_blank">明慧之窗</a> | <a href="https://dycg1eql8aigr.cloudfront.net/LdvzZ?mxlpbcuhq" target="_blank">细语人生</a> | <a href="https://dmepc9x6zy689.cloudfront.net/fBn3r?xmlfgkwu" target="_blank">新世纪影视</a> | <a href="https://d1znr9c9sm73cv.cloudfront.net/PUWMb?wvrazxyg" target="_blank">江峰时刻</a> | <a href="https://dicfdkfbqptcm.cloudfront.net/8?kunyjarbo" target="_blank">正见</a></p></td></tr>
 <tr><td VALIGN=TOP width="370" height="1000"><a href="https://github.com/1992513/djy/blob/master/gb/25/1/23/n14420911.md#1"><img width="320" src="https://i.epochtimes.com/assets/uploads/2024/12/id14385679-1-3-320x200.jpg"><p align="center">2025本田Accord与丰田Camry大比拼 谁胜出</p></a>
 <a href="https://github.com/1992513/djy/blob/master/gb/25/1/23/n14420911.md#1" title="2025本田Accord与丰田Camry大比拼 谁胜出""><img width="73" src="https://i.epochtimes.com/assets/uploads/2024/12/id14385679-1-3-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/1992513/djy/blob/master/gb/25/1/26/n14422734.md#1" title="川普威胁征税 哥伦比亚派专机接回遣返移民""><img width="73" src="https://i.epochtimes.com/assets/uploads/2023/05/id13989638-GettyImages-1252671260-320x200.jpg">&nbsp;</a>
@@ -13,16 +13,16 @@
 <a href="https://github.com/1992513/djy/blob/master/gb/25/1/26/n14422475.md#1" title="沈阳知名市场附近爆炸 威力强大 一片混乱""><img width="73" src="https://i.epochtimes.com/assets/uploads/2025/01/id14422500-86352c8a4554cc2b4a5353b21e4ad92f-320x200.png">&nbsp;</a>
 <a href="https://github.com/1992513/djy/blob/master/gb/25/1/24/n14421668.md#1" title="余茂春：世界须抛弃脚踩中美两条船幻想""><img width="73" src="https://i.epochtimes.com/assets/uploads/2025/01/id14409128-737420-320x200.jpg">&nbsp;</a>
 <p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1">更多头条......</a><hr><h2><p><strong>即时快讯&nbsp;&#160;&nbsp;&#160; :bar_chart: <a target="_blank" href="https://1992513.github.io/vd/yq.html">全球疫情地图</a></strong></p></h2>
-:clock8: <em>45分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/25/1/26/n14422816.md#1">中国60家光伏企业去年合计亏损556亿元</a><br>
-:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/25/1/26/n14422869.md#1">多家房企去年业绩预亏 绿地控股料高达130亿</a><br>
+:clock8: <em>9分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/25/1/27/n14422929.md#1">台湾台东发生规模5.2地震 11县市有震感</a><br>
+:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/25/1/26/n14422816.md#1">中国60家光伏企业去年合计亏损556亿元</a><br>
+:clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/25/1/26/n14422869.md#1">多家房企去年业绩预亏 绿地控股料高达130亿</a><br>
 :clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/25/1/23/n14420911.md#1">2025本田Accord与丰田Camry大比拼 谁胜出</a><br>
 :clock8: <em>3小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/25/1/27/n14422877.md#1">洛杉矶社区组织邀专家 讲解应灾与复原</a><br>
 :clock8: <em>3小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/25/1/26/n14422871.md#1">井友伦：川普新政如何影响美国及其移民体系</a><br>
-:clock8: <em>3小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/25/1/26/n14422853.md#1">【唐青看时事】中情局长第一把火 追责中共！</a><br>
+:clock8: <em>3小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/25/1/26/n14422853.md#1">【唐青看时事】中情局长第一把火 追责中共</a><br>
 :clock8: <em>3小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/25/1/26/n14422842.md#1">雄中雄女来美游学 与钻石吧高中姊妹校交流</a><br>
 :clock8: <em>4小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/25/1/26/n14422827.md#1">忧影视业因山火撤离 万余人联署吁留在洛杉矶</a><br>
 :clock8: <em>4小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/25/1/26/n14422802.md#1">美副总统万斯：物价会下降 但需要一些时间</a><br>
-:clock8: <em>4小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/25/1/26/n14422810.md#1">废除“出生公民权”令受阻 川普如何应对</a><br>
 <hr><h2><p><strong>新闻排行</strong></p></h2>
 <a href="https://github.com/1992513/djy/blob/master/gb/25/1/24/n14421165.md#1">大陆民众返乡过年 为省钱弃高铁挤火车</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/25/1/25/n14421800.md#1">民生艰困 中共高层到东北“作秀”挨轰</a><br>
@@ -50,7 +50,7 @@
 <a href="https://github.com/1992513/djy/blob/master/gb/25/1/26/n14422681.md#1">川普：正与多方谈购买TikTok 或30天内做决定</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/25/1/26/n14422553.md#1">江苏维权人吴继新拉条幅“反对共产党”遭拘</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/25/1/26/n14422556.md#1">大陆70余行业法轮功学员向李大师拜年</a><br>
-<a href="https://github.com/1992513/djy/blob/master/gb/25/1/26/n14422853.md#1">【唐青看时事】中情局长第一把火 追责中共！</a><br>
+<a href="https://github.com/1992513/djy/blob/master/gb/25/1/26/n14422853.md#1">【唐青看时事】中情局长第一把火 追责中共</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/25/1/26/n14422235.md#1">神韵牛津五场全爆满 知名音乐家赞演出纯洁</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/25/1/26/n14422327.md#1">【翻墙必看】百万珠宝首饰只卖60元 怎么回事？</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/25/1/21/n14419027.md#1">2024年729名中共人员遭厄运 曾迫害法轮功</a><br>
@@ -108,13 +108,13 @@
 <a href="https://github.com/1992513/djy/blob/master/gb/25/1/21/n14419144.md#1">剧集《漂白》被指抄袭南都报导《漂白》各方回应</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/25/1/21/n14419133.md#1">达成TikTok交易或高关税 川普让中共二选一</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/25/1/20/n14418247.md#1">【百年真相】 阳光法案难产 习反腐 越反越腐</a><br>
-<br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1">更多要闻......</a></p></td><td VALIGN=TOP rowspan=7 width="156" align="middle"><a href="https://d3ffsnetxena8g.cloudfront.net/video/play/1034.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"><br>神韵古典舞表演</a><br><a href="https://d3ffsnetxena8g.cloudfront.net/video/play/1154.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9ping.jpg" title="九评共产党" alt="九评共产党"><br>九评共产党</a><br><a href="https://d3ffsnetxena8g.cloudfront.net/video/play/1118.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"><br>共产主义终极目的</a><br><a href="https://d3ffsnetxena8g.cloudfront.net/video/play/1.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/weihuo.jpg" title="中共的伪火骗局"" alt="中共的伪火骗局""><br>中共的伪火骗局"</a><br><a href="https://d3ffsnetxena8g.cloudfront.net/video/play/2.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/changzhi.jpg" title="古今奇观 藏字石" alt="古今奇观 藏字石"><br>古今奇观 藏字石</a><br><a href="https://d3ffsnetxena8g.cloudfront.net/video/play/1044.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"><br>通往天安门的旅程</a><br><a href="https://d3ffsnetxena8g.cloudfront.net/video/play/49.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/weilai.jpg" title="未来人的神话" alt="未来人的神话"><br>未来人的神话故事</a><br><a href="https://d3ffsnetxena8g.cloudfront.net/video/play/1216.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"><br>中共罪恶的活摘</a><br><a href="https://d3ffsnetxena8g.cloudfront.net/video/play/1080.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/huozhai.jpg" title="铁证如山" alt="铁证如山"><br>铁证如山</a><br><a href="https://d3ffsnetxena8g.cloudfront.net/video/play/149.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"><br>一家四口死于暴政</a><br><a href="https://d3ffsnetxena8g.cloudfront.net/video/play/150.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"><br>弟妹相继死于迫害</a><br><a href="https://d3ffsnetxena8g.cloudfront.net/video/play/154.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"><br>她们被中共迫害死</a><br><a href="https://d3ffsnetxena8g.cloudfront.net/video/play/153.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"><br>双城血泪</a><br><a href="https://d3ffsnetxena8g.cloudfront.net/video/play/21.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"><br>无罪辩护震撼人心</a><br><a href="https://d3ffsnetxena8g.cloudfront.net/video/play/158.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6c10-720.jpg" title="中共的迫害与掩盖" alt="中共的迫害与掩盖"><br>中共的迫害与掩盖</a><br><a href="https://d3ffsnetxena8g.cloudfront.net/video/play/30.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"><br>中共官员的选择</a><br><a href="https://d3ffsnetxena8g.cloudfront.net/video/play/3.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1400l.jpg" title="剖析中共造假" alt="剖析中共造假"><br>剖析中共造假</a><br><a href="https://d3ffsnetxena8g.cloudfront.net/video/play/1103.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/425.jpg" title="万人上访真相" alt="万人上访真相"><br>万人上访真相</a><br><a href="https://d3ffsnetxena8g.cloudfront.net/video/play/121.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"><br>被迫害的清华学子</a><br><a href="https://d3ffsnetxena8g.cloudfront.net/video/play/14.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/jian-z513.jpg" title="见证五月十三日" alt="见证五月十三日"><br>见证五月十三日</a><br><a href="https://d3ffsnetxena8g.cloudfront.net/video/play/1096.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"><br>功夫 寻道</a><br><a href="https://d3ffsnetxena8g.cloudfront.net/video/play/1104.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"><br>歌唱家的人生奇迹</a><br><a href="https://d3ffsnetxena8g.cloudfront.net/video/play/163.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"><br>名校精英的选择</a><br><a href="https://d3ffsnetxena8g.cloudfront.net/video/play/18.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"><br>音乐之家的故事</a><br><a href="https://d3ffsnetxena8g.cloudfront.net/video/play/33.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"><br>平凡中的不平凡</a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/nizhibeituolanlao.jpg" title="善良女士被投男牢"  alt="善良女士被投男牢"><br>善良女士被投男牢</a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/huozhai1.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"><br>警卫目击中共活摘</a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/motoumks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"><br>马克思的成魔之路</a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/konggaojm.jpg" title="303万人的举报"  alt="303万人的举报"><br>303万人的举报</a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/lianganduibi.jpg" title="海峡两岸强烈反差"  alt="海峡两岸强烈反差"><br>海峡两岸强烈反差</a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"><br>印度媒体报道东方</a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/xuejiao.jpg" title="不一样的海外校园"  alt="不一样的海外校园"><br>不一样的海外校园</a><br>
-<tr><td VALIGN=middle width="370"><div align="center"><h2><a href="http://d3ffsnetxena8g.cloudfront.net/UmhjM">我要退出中共的党团队</a></h2>昨日三退人数: 39,881</div><br></td><td VALIGN=middle width="371"><h3 align="center"><strong align="center">
+<br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1">更多要闻......</a></p></td><td VALIGN=TOP rowspan=7 width="156" align="middle"><a href="https://d80sq78k20szb.cloudfront.net/video/play/1034.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"><br>神韵古典舞表演</a><br><a href="https://d80sq78k20szb.cloudfront.net/video/play/1154.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9ping.jpg" title="九评共产党" alt="九评共产党"><br>九评共产党</a><br><a href="https://d80sq78k20szb.cloudfront.net/video/play/1118.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"><br>共产主义终极目的</a><br><a href="https://d80sq78k20szb.cloudfront.net/video/play/1.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/weihuo.jpg" title="中共的伪火骗局"" alt="中共的伪火骗局""><br>中共的伪火骗局"</a><br><a href="https://d80sq78k20szb.cloudfront.net/video/play/2.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/changzhi.jpg" title="古今奇观 藏字石" alt="古今奇观 藏字石"><br>古今奇观 藏字石</a><br><a href="https://d80sq78k20szb.cloudfront.net/video/play/1044.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"><br>通往天安门的旅程</a><br><a href="https://d80sq78k20szb.cloudfront.net/video/play/49.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/weilai.jpg" title="未来人的神话" alt="未来人的神话"><br>未来人的神话故事</a><br><a href="https://d80sq78k20szb.cloudfront.net/video/play/1216.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"><br>中共罪恶的活摘</a><br><a href="https://d80sq78k20szb.cloudfront.net/video/play/1080.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/huozhai.jpg" title="铁证如山" alt="铁证如山"><br>铁证如山</a><br><a href="https://d80sq78k20szb.cloudfront.net/video/play/149.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"><br>一家四口死于暴政</a><br><a href="https://d80sq78k20szb.cloudfront.net/video/play/150.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"><br>弟妹相继死于迫害</a><br><a href="https://d80sq78k20szb.cloudfront.net/video/play/154.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"><br>她们被中共迫害死</a><br><a href="https://d80sq78k20szb.cloudfront.net/video/play/153.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"><br>双城血泪</a><br><a href="https://d80sq78k20szb.cloudfront.net/video/play/21.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"><br>无罪辩护震撼人心</a><br><a href="https://d80sq78k20szb.cloudfront.net/video/play/158.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6c10-720.jpg" title="中共的迫害与掩盖" alt="中共的迫害与掩盖"><br>中共的迫害与掩盖</a><br><a href="https://d80sq78k20szb.cloudfront.net/video/play/30.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"><br>中共官员的选择</a><br><a href="https://d80sq78k20szb.cloudfront.net/video/play/3.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1400l.jpg" title="剖析中共造假" alt="剖析中共造假"><br>剖析中共造假</a><br><a href="https://d80sq78k20szb.cloudfront.net/video/play/1103.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/425.jpg" title="万人上访真相" alt="万人上访真相"><br>万人上访真相</a><br><a href="https://d80sq78k20szb.cloudfront.net/video/play/121.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"><br>被迫害的清华学子</a><br><a href="https://d80sq78k20szb.cloudfront.net/video/play/14.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/jian-z513.jpg" title="见证五月十三日" alt="见证五月十三日"><br>见证五月十三日</a><br><a href="https://d80sq78k20szb.cloudfront.net/video/play/1096.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"><br>功夫 寻道</a><br><a href="https://d80sq78k20szb.cloudfront.net/video/play/1104.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"><br>歌唱家的人生奇迹</a><br><a href="https://d80sq78k20szb.cloudfront.net/video/play/163.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"><br>名校精英的选择</a><br><a href="https://d80sq78k20szb.cloudfront.net/video/play/18.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"><br>音乐之家的故事</a><br><a href="https://d80sq78k20szb.cloudfront.net/video/play/33.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"><br>平凡中的不平凡</a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/nizhibeituolanlao.jpg" title="善良女士被投男牢"  alt="善良女士被投男牢"><br>善良女士被投男牢</a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/huozhai1.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"><br>警卫目击中共活摘</a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/motoumks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"><br>马克思的成魔之路</a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/konggaojm.jpg" title="303万人的举报"  alt="303万人的举报"><br>303万人的举报</a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/lianganduibi.jpg" title="海峡两岸强烈反差"  alt="海峡两岸强烈反差"><br>海峡两岸强烈反差</a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"><br>印度媒体报道东方</a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/xuejiao.jpg" title="不一样的海外校园"  alt="不一样的海外校园"><br>不一样的海外校园</a><br>
+<tr><td VALIGN=middle width="370"><div align="center"><h2><a href="http://d80sq78k20szb.cloudfront.net/UmhjM">我要退出中共的党团队</a></h2>昨日三退人数: </div><br></td><td VALIGN=middle width="371"><h3 align="center"><strong align="center">
 
 ```diff
 !退出中共党、团、队总人数:
 
-!共 442,004,860 人
+!共  人
 ```
 </strong></h3></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>中国人权</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/25/1/26/n14422789.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2025/01/id14422938-IMG_3568-320x200.jpg"></a><a href="https://github.com/1992513/djy/blob/master/gb/25/1/26/n14422789.md#1">荷兰多个民间组织集会 抗议丁薛祥到访</a><br><a href="https://github.com/1992513/djy/blob/master/gb/25/1/25/n14422122.md#1">中共党魁视察辽宁 作家孙大骆被警察骚扰</a><br><a href="https://github.com/1992513/djy/blob/master/gb/25/1/25/n14421941.md#1">肝25万肾20万 天津卫健委对器官明码标价惹议</a><br><a href="https://github.com/1992513/djy/blob/master/gb/25/1/24/n14421353.md#1">中国异议人士“被精神病”案例大增</a><br><a href="https://github.com/1992513/djy/blob/master/gb/25/1/22/n14419429.md#1">缅北电诈亲历者：无业绩“猪仔”遭摘器官</a><br><a href="https://github.com/1992513/djy/blob/master/gb/25/1/20/n14418191.md#1">25年来 法轮功学员遭中共精神病院摧残（下）</a><br><br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>中国经济</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/25/1/26/n14422816.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2023/08/id14059109-GettyImages-1526473009-320x200.jpg"></a><a href="https://github.com/1992513/djy/blob/master/gb/25/1/26/n14422816.md#1">中国60家光伏企业去年合计亏损556亿元</a><br><a href="https://github.com/1992513/djy/blob/master/gb/25/1/26/n14422869.md#1">多家房企去年业绩预亏 绿地控股料高达130亿</a><br><a href="https://github.com/1992513/djy/blob/master/gb/25/1/26/n14422790.md#1">福建男子过年被催婚 一句话让亲戚沉默</a><br><a href="https://github.com/1992513/djy/blob/master/gb/25/1/25/n14422195.md#1">中国锂业双雄业绩皆亏 赣锋锂业预亏高达21亿</a><br><a href="https://github.com/1992513/djy/blob/master/gb/25/1/25/n14422210.md#1">中国白酒市场新年内卷 经销商努力保本经营</a><br><a href="https://github.com/1992513/djy/blob/master/gb/25/1/25/n14422145.md#1">2024年中共卖地收入下降16% 连续三年下滑</a><br><br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/ncid283.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>大陆政治</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/25/1/25/n14422032.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2023/11/id14143458-000_Hkg10247528-320x200.jpg"></a><a href="https://github.com/1992513/djy/blob/master/gb/25/1/25/n14422032.md#1">多重因素促使美国律所纷纷离开中国</a><br><a href="https://github.com/1992513/djy/blob/master/gb/25/1/25/n14421934.md#1">卢比奥与王毅通话关注中共胁迫 台外交部回应</a><br><a href="https://github.com/1992513/djy/blob/master/gb/25/1/24/n14421496.md#1">【名家专栏】中共控制巴拿马运河威胁美国安全</a><br><a href="https://github.com/1992513/djy/blob/master/gb/25/1/24/n14421597.md#1">TikTok部分美国员工纷纷跳槽至Meta和谷歌</a><br><a href="https://github.com/1992513/djy/blob/master/gb/25/1/24/n14421578.md#1">克宫：普京准备与川普通话 望启动核削减谈判</a><br><a href="https://github.com/1992513/djy/blob/master/gb/25/1/24/n14421584.md#1">菲中再起争端 菲律宾推出漫画书对抗中共</a><br><br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/ncid277.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>天灾人祸</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/25/1/26/n14422757.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2025/01/id14422765-7be807768ff36c03d3a58c65eceb5521-320x200.png"></a><a href="https://github.com/1992513/djy/blob/master/gb/25/1/26/n14422757.md#1">大陆返乡潮高峰期 多地因暴风雪封路取消航班</a><br><a href="https://github.com/1992513/djy/blob/master/gb/25/1/26/n14422753.md#1">四川康定、井研、峨眉山接连地震</a><br><a href="https://github.com/1992513/djy/blob/master/gb/25/1/25/n14421722.md#1">寒潮暴雪来袭 中国多地高速封闭 列车停运</a><br><a href="https://github.com/1992513/djy/blob/master/gb/25/1/25/n14421841.md#1">深圳日本男童遇害案 凶犯被判死刑 陆媒消音</a><br><a href="https://github.com/1992513/djy/blob/master/gb/25/1/24/n14421711.md#1">贵州男带妻子骑摩托2400多公里返乡过年</a><br><a href="https://github.com/1992513/djy/blob/master/gb/25/1/23/n14420890.md#1">中国游客在北海道铁轨拍照 被列车撞亡</a><br><br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/ncid280.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>社会万象</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/25/1/26/n14422532.md#1"><img width="320" align ="left" src="https://www.epochtimes.com/assets/themes/djy/images/djy_post_default_featured_image_320x200.jpg"></a><a href="https://github.com/1992513/djy/blob/master/gb/25/1/26/n14422532.md#1">三退声明精选（2025/01/25）</a><br><a href="https://github.com/1992513/djy/blob/master/gb/25/1/26/n14422402.md#1">上海扩大禁放烟花爆竹范围 购买者须实名登记</a><br><a href="https://github.com/1992513/djy/blob/master/gb/25/1/26/n14422372.md#1">过年拼多赚点钱 大陆外卖小哥选择不返乡</a><br><a href="https://github.com/1992513/djy/blob/master/gb/25/1/26/n14422353.md#1">济南一小鹏汽车起火烧成铁架 宝马等9车全烧</a><br><a href="https://github.com/1992513/djy/blob/master/gb/25/1/25/n14422017.md#1">60岁以上不能独立承租 中国老年人租房陷困境</a><br><a href="https://github.com/1992513/djy/blob/master/gb/25/1/25/n14421805.md#1">河南南阳一头牛闯进理发店 吓跑所有顾客</a><br><br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/ncid282.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>科教文化</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/25/1/8/n14408670.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2020/06/IMG_7239-320x200.jpg"></a><a href="https://github.com/1992513/djy/blob/master/gb/25/1/8/n14408670.md#1">瑞士顶尖学府招生筛查中国高校 被指酝酿多年</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/12/28/n14399580.md#1">中国又一民营火箭发射失败</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/12/27/n14398910.md#1">从车企到光伏业 中国更多领域陷入“内卷”</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/12/26/n14397974.md#1">中国考研人数再减 传大考首日60万人弃考</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/12/25/n14397882.md#1">日本放宽中国游客赴日要求 将推出10年签证</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/12/23/n14396531.md#1">崔健乐队知名萨克斯手刘元病逝 终年64岁</a><br><br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/ncid281.md#1">更多......</a></p></td></tr>
 <tr><td VALIGN=TOP width="370"><h2><p><strong>独家视角</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/25/1/8/n14409355.md#1">【独家】中共欲藉美国定罪法轮功 逃脱世纪人权罪责</a><br>
